# compu_trit

./: CMakeLists.txt
src/: main.cpp
src/alu/: TernaryALU.hpp
src/core/: Component.hpp  Message.cpp  Message.hpp  Trit.hpp  bus.hpp  core.hpp  processor.hpp
src/memory/: TernaryMemory.hpp
